added file upload and improve some endpoints

--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "@nestjs/platform-fastify": "^8.4.7",
     "@nestjs/swagger": "^5.2.1",
     "@nestjs/typeorm": "^8.1.4",
+    "@webundsoehne/nest-fastify-file-upload": "^2.0.0",
+    "buffer-to-data-url": "^1.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cloudinary": "^1.30.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -46,6 +49,7 @@
     "@nestjs/testing": "^8.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "27.5.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
